package p;

message BiLog {
    required string projectName = 1;
    optional string actionName = 2;
    optional int64 timestamp = 3;

    extensions 100 to 199;
}

